# io-maildir

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  flake.nix
examples/: std_store_message.rs
src/: client.rs  flag.rs  lib.rs  maildir.rs  message.rs
src/coroutines/: add-flags.rs  copy-message.rs  create-maildir.rs  delete-maildir.rs  flags_add.rs  flags_remove.rs  flags_set.rs  get-message.rs  list-maildirs.rs  list-messages.rs  locate-message-by-id.rs  maildir_create.rs  maildir_delete.rs  maildir_list.rs  maildir_rename.rs  message_copy.rs  message_get.rs  message_list.rs  message_locate.rs  message_move.rs  message_store.rs  mod.rs  move-message.rs  remove-flags.rs  rename-maildir.rs  set-flags.rs  store-message.rs
tests/: std.rs
