[package]
name = "io-maildir"
description = "I/O-free Maildir library"
version = "0.0.1"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "filesystem", "email"]
keywords = ["io-free", "coroutine", "maildir", "email"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-maildir/latest/io_maildir"
repository = "https://github.com/pimalaya/io-maildir"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = ["mail-parser/serde"]

[[example]]
name = "std_store_message"
required-features = []

[dev-dependencies]
env_logger = "0.11"
tempfile = "3.20"

[dependencies]
gethostname = "1"
log = "0.4"
mail-parser = "0.11"
memchr = "2.7"
thiserror = "2"
